examples/test/testpolicy6934.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy6934
  namespace: namespace16
spec:
  podSelector:
    matchLabels:
      key12: value13
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key3: value22
          key33: value17
      podSelector:
        matchLabels:
          key49: value0
          key30: value35
